# fast-embedding-api

./: .coverage  .dockerignore  .env.example  .gitignore  BENCHMARK_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: benchmark.py  benchmark_results.json  k6-load-test.js
docs/: BENCHMARKS.md  CHANGELOG.md  DOCKER_SETUP.md  PRODUCTION.md  PROJECT_STATUS.md  QUICKSTART.md
scripts/: deploy.sh  run.sh
src/: __init__.py  config.py  main.py  model_manager.py
tests/: README.md  conftest.py  example_client.py  test_api.py  test_config.py  test_integration.py  test_model_manager.py
